<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context=".controller.MainActivity">


    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/trans"
        android:contentDescription="exit button"
        android:src="@drawable/exitbutton"
        app:layout_constraintBottom_toTopOf="@+id/sceneText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sceneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="serif"
        android:text="@string/story_default"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="169dp"
        android:layout_height="73dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/trans"
        android:contentDescription="next"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sceneText"
        app:layout_constraintVertical_bias="0.0"
        app:tint="#352F2F" />

    <LinearLayout
        android:id="@+id/optionButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sceneText"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/storyOptionA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#4A2511"
            android:fontFamily="serif"
            android:text="@string/story_optionA_button"
            android:textAllCaps="false"
            android:textColor="#CABDBD"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/storyOptionB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#4A2511"
            android:fontFamily="serif"
            android:text="@string/story_optionB_button"
            android:textAllCaps="false"
            android:textColor="#CABDBD"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>