<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".controller.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#D3E4E3"
        android:inputType="textCapSentences"
        android:text="@string/move_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#D3E4E3"
        android:inputType="textCapSentences"
        android:text="@string/mapButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="5dip"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/s4L"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/ocean4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/s4R"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/s3L"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/ocean3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/s3R"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/s2L"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/ocean2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/s2R"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/s1L"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/ocean1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/s1R"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/s0L"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/ship"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ship" />

            <ImageView
                android:id="@+id/s0R"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>