<resources>
    <string name="app_name">Marauders_at_Sea</string>
    <string name="inventory">INVENTORY: \nRope: 20 spools \nWood: 20 logs \nMedicine: 20 vials</string>
    <string name="health">Health: 100</string>
    <string name="welcome">Marauders at Sea</string>
    <string name="RAfound">You found something!</string>
    <string name="pickup">Pick up!</string>
    <string name="move_button">Sail</string>
    <string name="obstacle">It looks like an old repair in the bilge sprung a leak, and the water is already ankle deep!</string>
    <string name="playButton">Play</string>
    <string name="mapButton">Map</string>
    <string name="feedthefish">You and your crew fought hard, but the ship has capsized. \nPress play to restart.</string>
    <string name="characters">"Every pirate needs a good crew, so you'll be traveling with the very best:
        EURYDICE, the brave captainCASSEIOPIA 'CAS', the dashing first mate
        AMIRA, the clever map maker
        AMELIA 'MEELS', the French cook
        ISHA 'ISH', the peaceful surgeon
        ORLIC, the oddball gunner
        Stay safe out there, sailor. All hands hoay!</string>
    <string name="story_optionA_button">Grab a bucket - we will bail it out one trip at a time</string>
    <string name="story_optionB_button">Use a hammer and nails to put new planks over the leak and seal it up [requires 10 logs of wood]</string>
    <string name="story_default">One afternoon, on a tiny island filled with the boldest, drunkest and strongest pirates in all the land, a young woman. It was unsigned, but she recognized the handwriting of her old mentor. There was no telling what shifty client he was working with this time.She turns to you. (Island)
    </string>
    <string name="RAFull">"Oh no! Your inventory is full. Do you want to throw something overboard to make room?"</string>
    <string name="RAPickedUp">"You successfully picked it up!"</string>

</resources>