...
        android:layout_marginStart="336dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/trans"
        android:contentDescription="exit button"
        android:src="@android:drawable/btn_dialog"
        app:layout_constraintBottom_toTopOf="@+id/obstacleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
