...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/exitRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="600dp"
...
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="serif"
        android:text="@string/RAfound"
        android:textColor="#D6CECE"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/grabRA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/grabRA"
...
